# wright

./: .#README.md  .gitignore  .nvimlog  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Containerfile  README.md  build-musl.sh  build.rs  final_migration.py  wright.toml.example
.cargo/: config.toml
.github/workflows/: ci.yml
docs/: apply-design.md  architecture.md  build-mechanics.md  cli-reference.md  configuration.md  contributing.md  cookbook.md  database.md  dependencies.md  design-spec.md  getting-started.md  logging-design.md  logging.md  maintenance-guide.md  os-maintenance-guide.md  package-format.md  repositories.md  resource-allocation.md  system-building-guide.md  terminology.md  troubleshooting.md  usage.md  writing-assemblies.md  writing-plans.md
docs/adr/: 0001-record-architecture-decisions.md  0002-wave-by-wave-install.md  0003-default-resolution-policy.md  0004-no-magic-behavior.md  0005-two-database-design.md  0006-mvp-two-pass-build.md  0007-usrmerge-and-sbin-merge.md  0008-no-dev-splitting.md  0009-separate-plan-output-dependencies.md  0010-pre-copied-sysroot-isolation.md  0011-plan-name-only-dep-all-outputs.md  0012-overlayfs-per-task-upper.md  0013-multi-lowerdir-isolation.md  0014-launch-and-pack-format.md  0015-folio-manifest-replaces-pack.md  0015-group-manifest-replaces-pack.md  0016-advisory-runtime-dependencies.md  0017-plan-source-single-dep-truth.md  0018-unified-cli-porcelain-plumbing.md  0019-cas-delivery-recovery.md  0020-merge-cli-and-commands-directories.md  0021-cargo-style-span-driven-output.md  0022-git-fetch-via-libgit2-no-system-git.md  0023-parts-as-maintenance-ledger.md  0024-workdir-source-names-are-original-basenames.md  index.md
docs/dev/: contributing.md  index.md  isolation-pitfalls.md  logging-design.md  module-layout.md  tracing-output-design.md
docs/explanation/: apply-design.md  architecture.md  batch-processing.md  build-checkpoint-design.md  build-resume-model.md  checkpoint-recovery.md  delivery-recovery.md  dependency-dag.md  dependency-philosophy.md  dependency-resolution.md  design-spec.md  distribution-model.md  execution-hierarchy.md  filesystem-hierarchy-standard.md  index.md  install-design.md  install-transaction-design.md  isolation-model.md  launch-design.md  overlayfs-layers.md  plan-build.md  plan-lifecycle.md  plan-pipeline.md  system-building-guide.md
docs/how-to/: bootstrap-new-system.md  build-a-part.md  build-an-assembly.md  build-dependency-chains.md  build-go-package.md  build-rust-package.md  force-rebuild-everything.md  handle-circular-dependencies.md  index.md  inspect-dependency-tree.md  maintain-os-parts.md  perform-recursive-updates.md  perform-security-updates.md  rebuild-after-library-update.md  rebuild-core-system-plans.md  rebuild-reverse-dependencies.md  remove-packages-and-cleanup.md  resume-failed-build.md  troubleshoot-common-issues.md  use-custom-executor.md  write-a-folio.md  write-a-plan.md
docs/reference/: build-mechanics.md  cli-reference.md  configuration.md  database-design.md  documentation-style-guide.md  folio-manifest.md  group-manifest.md  index.md  local-inventory.md  logging.md  plan-manifest.md  resource-allocation.md  terminology.md  writing-assemblies.md  writing-plans.md
docs/tutorials/: first-steps.md  getting-started.md  index.md
scripts/: fetch-sources.sh  migrate-plans.py
src/: config.rs  error.rs  lib.rs
tests/: integration.rs
tools/: migrate_installed_db.py  migrate_origin.py  migrate_sources.py
(+256 files in other folders)
