[package]
name = "wright"
version = "1.2.5"
edition = "2021"
description = "Declarative, extensible, sandboxed Linux package manager"
license = "MIT"

[[bin]]
name = "wright"
path = "src/bin/wright.rs"

[[bin]]
name = "wbuild"
path = "src/bin/wbuild.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"
tar = "0.4"
zstd = "0.13"
flate2 = "1.0"
bzip2 = "0.5"
xz2 = "0.1"
walkdir = "2"
tempfile = "3"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
libc = "0.2"
nix = { version = "0.29", features = ["sched", "mount", "signal", "process", "hostname", "user", "fs", "resource"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
indicatif = "0.17"
git2 = "0.19"
