[package]
name = "wright"
version = "3.1.2"
edition = "2021"
description = "Declarative, extensible, sandboxed Linux package manager"
license = "MIT"

[[bin]]
name = "wright"
path = "src/bin/wright.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
sha2 = "0.10"
tar = "0.4"
zstd = "0.13"
flate2 = "1.0"
bzip2 = { version = "0.5", features = ["static"] }
xz2 = "0.1"
lzma-rust = { version = "0.16", package = "lzma-rust2" }
zip = "2"
walkdir = "2"
rayon = "1"
tempfile = "3"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
libc = "0.2"
nix = { version = "0.29", features = ["sched", "mount", "signal", "process", "hostname", "user", "fs", "resource"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
indicatif = "0.17"
git2 = { version = "0.19", features = ["vendored-libgit2", "vendored-openssl"] }
owo-colors = "4"
terminal_size = "0.4"
serde_json = "1.0.149"
figment = { version = "0.10.19", features = ["toml", "env"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls", "macros"] }
tokio = { version = "1.52.1", features = ["full"] }
futures-util = "0.3.32"

[build-dependencies]
clap = { version = "4", features = ["derive"] }
clap_mangen = "0.2"
clap_complete = "4"
